examples/k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temp-example-deployment
  namespace: ml
spec:
  selector:
    app: temp-example-deployment
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
