examples/k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temp-example-deployment
  namespace: ml
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1d"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1d"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - temp-example-deployment.breithorn.svc.cscs.ch
    secretName: temp-example-deployment-cert
  rules:
  - host: temp-example-deployment.breithorn.svc.cscs.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: temp-example-deployment
            port:
              number: 8080
